[package]
name = "mcp-apps-chess"
version = "0.1.0"
edition = "2021"
description = "Chess MCP Server with interactive UI widget"
publish = false

[[bin]]
name = "mcp-apps-chess"
path = "src/main.rs"

[dependencies]
pmcp = { path = "../..", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
async-trait = "0.1"
