[package]
name = "mcp-apps-dataviz"
version = "0.1.0"
edition = "2021"
description = "Data Visualization MCP Server with interactive Chart.js widget (Chinook SQLite Explorer)"
publish = false

[[bin]]
name = "mcp-apps-dataviz"
path = "src/main.rs"

[dependencies]
pmcp = { path = "../..", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
async-trait = "0.1"
rusqlite = { version = "0.34", features = ["bundled"] }
