[package]
name = "mcp-apps-map"
version = "0.1.0"
edition = "2021"
description = "World City Explorer MCP Server with interactive map widget"
publish = false

[[bin]]
name = "mcp-apps-map"
path = "src/main.rs"

[dependencies]
pmcp = { path = "../..", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
async-trait = "0.1"
